Use exact frontend URL for CORS allowed origins to fix wildcard conflicts